{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 259,
  "lineage": "2df4d905-8703-108b-2821-9865776c1c25",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "DXbVyC05254=",
            "id": "projects/de-eq-asmnt-2024/global/securityPolicies/eqasmnt-security-policy",
            "name": "eqasmnt-security-policy",
            "project": "de-eq-asmnt-2024",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Whitelist IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "40.65.112.150/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/securityPolicies/eqasmnt-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/regions/us-west2/networkEndpointGroups/eqasmnt-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-04-16T18:02:02.414-07:00",
            "enable_cdn": false,
            "fingerprint": "wamQoAVATn0=",
            "generated_id": 5451589910168510821,
            "id": "projects/de-eq-asmnt-2024/global/backendServices/eqasmnt-urlmap-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "eqasmnt-urlmap-backend-default",
            "port_name": "http",
            "project": "de-eq-asmnt-2024",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/beta/projects/de-eq-asmnt-2024/global/securityPolicies/eqasmnt-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/backendServices/eqasmnt-urlmap-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.49.134.95",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-04-16T17:58:28.469-07:00",
            "id": "projects/de-eq-asmnt-2024/global/addresses/eqasmnt-urlmap-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "eqasmnt-urlmap-address",
            "prefix_length": 0,
            "project": "de-eq-asmnt-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/addresses/eqasmnt-urlmap-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/de-eq-asmnt-2024/global/forwardingRules/eqasmnt-urlmap",
            "ip_address": "34.49.134.95",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "eqasmnt-urlmap",
            "port_range": "80-80",
            "project": "de-eq-asmnt-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/forwardingRules/eqasmnt-urlmap",
            "target": "https://www.googleapis.com/compute/beta/projects/de-eq-asmnt-2024/global/targetHttpProxies/eqasmnt-urlmap-http-proxy"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-16T18:02:47.360-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/de-eq-asmnt-2024/global/targetHttpProxies/eqasmnt-urlmap-http-proxy",
            "name": "eqasmnt-urlmap-http-proxy",
            "project": "de-eq-asmnt-2024",
            "proxy_bind": false,
            "proxy_id": 1664958364749308248,
            "self_link": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/targetHttpProxies/eqasmnt-urlmap-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/urlMaps/eqasmnt-urlmap-url-map"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-16T18:02:35.683-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/backendServices/eqasmnt-urlmap-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "6k0GfSieMbA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/de-eq-asmnt-2024/global/urlMaps/eqasmnt-urlmap-url-map",
            "map_id": 1809290891055243588,
            "name": "eqasmnt-urlmap-url-map",
            "path_matcher": [],
            "project": "de-eq-asmnt-2024",
            "self_link": "https://www.googleapis.com/compute/v1/projects/de-eq-asmnt-2024/global/urlMaps/eqasmnt-urlmap-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}